--- a/Services/AppointmentSchedule/AppointmentSchedule.Domain/AppointmentSchedule.Domain.csproj
+++ b/Services/AppointmentSchedule/AppointmentSchedule.Domain/AppointmentSchedule.Domain.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Framework\NVI.DomainBase\NVI.DomainBase.csproj" />
   </ItemGroup>
 
