--- a/Services/AppointmentSchedule/AppointmentSchedule.Infrastructure/AppointmentSchedule.Infrastructure.csproj
+++ b/Services/AppointmentSchedule/AppointmentSchedule.Infrastructure/AppointmentSchedule.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <RootNamespace>AppointmentSchedule.Infrastructure</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AppointmentSchedule.Domain\AppointmentSchedule.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
