--- a/Services/AppointmentSchedule/AppointmentSchedule.Api/appsettings.json
+++ b/Services/AppointmentSchedule/AppointmentSchedule.Api/appsettings.json
@@ -1,10 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionString": "Server=tcp:127.0.0.1,5433;Database=AppoinmentManagementSystem.Services.AppointmentScheduleDb;User Id=sa;Password=Pass@word;",
+  "Serilog": {
+    "SeqServerUrl": null,
+    "LogstashgUrl": null,
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.eShopOnContainers": "Information",
+        "System": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+
+  "SubscriptionClientName": "AppoinmentSchedule",
+  "GracePeriodTime": "1",
+  "CheckUpdateTime": "30000",
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  },
+  "EventBusRetryCount": 5,
+  "EventBusConnection": "localhost",
+  "UseVault": false,
+  "Vault": {
+    "Name": "eshop",
+    "ClientId": "your-clien-id",
+    "ClientSecret": "your-client-secret"
+  }
+
 }
