--- a/Services/AppointmentSchedule/AppointmentSchedule.Api/AppointmentSchedule.Api.csproj
+++ b/Services/AppointmentSchedule/AppointmentSchedule.Api/AppointmentSchedule.Api.csproj
@@ -20,6 +20,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.11.2" />
+    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.25.0" />
+    <PackageReference Include="Grpc.Core" Version="2.33.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.25.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -38,7 +47,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Framework\NVI.Utilities\NVI.Utilities.csproj" />
     <ProjectReference Include="..\..\..\Framework\NVI.WebHost.Extensions\NVI.WebHost.Extensions.csproj" />
     <ProjectReference Include="..\AppointmentSchedule.Infrastructure\AppointmentSchedule.Infrastructure.csproj" />
   </ItemGroup>
