--- a/Services/AppointmentSchedule/AppointmentSchedule.Api/AppointmentSchedule.Api.csproj
+++ b/Services/AppointmentSchedule/AppointmentSchedule.Api/AppointmentSchedule.Api.csproj
@@ -23,6 +23,8 @@
     <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="3.1.0" />
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="3.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="FluentValidation" Version="8.6.0" />
     <PackageReference Include="Google.Protobuf" Version="3.11.2" />
     <PackageReference Include="Grpc.AspNetCore.Server" Version="2.25.0" />
     <PackageReference Include="Grpc.Core" Version="2.33.1" />
@@ -48,6 +50,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Http" Version="7.2.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
