--- a/ApiGetways/Ntrada.Extensions.Jwt/Ntrada.Extensions.Jwt.csproj
+++ b/ApiGetways/Ntrada.Extensions.Jwt/Ntrada.Extensions.Jwt.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-    <ProjectReference Include="..\..\src\Ntrada\Ntrada.csproj" />
+    <ProjectReference Include="..\Ntrada\Ntrada.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
