--- a/ApiGetways/Ntrada.Extensions.CustomErrors/Ntrada.Extensions.CustomErrors.csproj
+++ b/ApiGetways/Ntrada.Extensions.CustomErrors/Ntrada.Extensions.CustomErrors.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-        <ProjectReference Include="..\..\src\Ntrada\Ntrada.csproj" />
+        <ProjectReference Include="..\Ntrada\Ntrada.csproj" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(Configuration)' == 'Release'">
