--- a/ApiGetways/Ntrada.Extensions.Swagger/Ntrada.Extensions.Swagger.csproj
+++ b/ApiGetways/Ntrada.Extensions.Swagger/Ntrada.Extensions.Swagger.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
     
     <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-        <ProjectReference Include="..\..\src\Ntrada\Ntrada.csproj" />
+        <ProjectReference Include="..\Ntrada\Ntrada.csproj" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(Configuration)' == 'Release'">
